<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewProperty">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="5sp"
                android:text="@string/address"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:autofillHints=""
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:textSize="24sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/suburb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="5sp"
                android:text="@string/suburb"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edit_suburb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:autofillHints=""
                android:hint="@string/suburb"
                android:inputType="textPersonName"
                android:textSize="24sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="5sp"
                android:text="@string/state"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edit_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:autofillHints=""
                android:hint="@string/state"
                android:inputType="textPersonName"
                android:textSize="24sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/postcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="5sp"
                android:text="@string/postcode"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edit_postcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:autofillHints=""
                android:hint="@string/postcode"
                android:inputType="numberDecimal"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="5sp"
                android:text="@string/price"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:autofillHints=""
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:textSize="24sp"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btn_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/new_property" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/save" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>